getClub endpoint update, swagger doc update, error response wrapper
