# docs/swagger.json
@@ -37,13 +37,44 @@
           "application/json"
         ],
         "tags": [
-          "Club"
+          "Clubs"
         ],
         "summary": "Club holds all data relevant to a football club.",
-        "operationId": "getClub",
+        "operationId": "getClubs",
         "responses": {
           "200": {
             "$ref": "#/responses/GetClubsResponse"
+          }
+        }
+      }
+    },
+    "/club/{id}": {
+      "get": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "Clubs"
+        ],
+        "summary": "Club holds all data relevant to a football club.",
+        "operationId": "getClub",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/GetClubResponse"
+          },
+          "404": {
+            "$ref": "#/responses/ErrorResponse"
           }
         }
       }
@@ -96,8 +127,11 @@
         "name"
       ],
       "properties": {
+        "id": {
+          "type": "string",
+          "x-go-name": "ID"
+        },
         "name": {
-          "description": "Name of club",
           "type": "string",
           "x-go-name": "Name"
         }
@@ -111,11 +145,30 @@
       },
       "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
     },
+    "ErrorResponse": {
+      "type": "object",
+      "properties": {
+        "error": {
+          "type": "string",
+          "x-go-name": "Error"
+        }
+      },
+      "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
+    },
     "GetChampionshipsResponse": {
       "type": "object",
       "properties": {
         "championships": {
           "$ref": "#/definitions/ChampionshipsDTO"
+        }
+      },
+      "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
+    },
+    "GetClubResponse": {
+      "type": "object",
+      "properties": {
+        "club": {
+          "$ref": "#/definitions/ClubDTO"
         }
       },
       "x-go-package": "_/home/ivan/Work/golang/api/rest/models"
@@ -131,10 +184,22 @@
     }
   },
   "responses": {
+    "ErrorResponse": {
+      "description": "This text will appear as description of your response body.",
+      "schema": {
+        "$ref": "#/definitions/ErrorResponse"
+      }
+    },
     "GetChampionshipsResponse": {
       "description": "This text will appear as description of your response body.",
       "schema": {
         "$ref": "#/definitions/GetChampionshipsResponse"
+      }
+    },
+    "GetClubResponse": {
+      "description": "This text will appear as description of your response body.",
+      "schema": {
+        "$ref": "#/definitions/GetClubResponse"
       }
     },
     "GetClubsResponse": {
